# S6

./: .gitignore
DB/L1/: docker-compose.yaml  pyproject.toml
DB/L1/sql/: create_tables.sql  fill_data.sql
DB/L1/src/: config.py  containers.py  database.py  interface.py  main.py  repositories.py  services.py
DB/L1/src/tcss/: styles.tcss
DB/L2/: schema.mwb
DB/L2/sql/: create.sql  fill.sql  queries.sql  relations.sql
DB/L34/: docker-compose.yaml
DB/L5/: create_database.sql  create_tables.sql  insert_data.sql  queries.sql
DB/L6/: pyproject.toml
DB/L6/src/: config.py  database.py  main.ipynb
DB/L7/: pyproject.toml
DB/L7/src/: database.py  main.ipynb  table.py
Frontend/L1/task1/: index.html  styles.css
Frontend/L1/task2/: index.html  styles.css
Frontend/L2/: task1.js  task2.js
Frontend/L3/: task1.js  task2.js  task3.js
Graphs/L1/: pyproject.toml
Graphs/L1/src/: constants.py  draw.py  edges.py  history.py  main.py  matrix.py  perfomance.py  print_helpers.py  vertexes.py
Graphs/L2/: perfomance.py  pyproject.toml  trace_log.py
Graphs/L3/: main.ipynb  pyproject.toml
Graphs/L4/: draw.py  main.ipynb  pyproject.toml
ML/Labs/: pyproject.toml
ML/Labs/L1/: main.py  utils.py
ML/Labs/L1/scripts/: install.sh
ML/Labs/L2/: config.py  main.ipynb
ML/Labs/L2/scripts/: download.sh
ML/Labs/L3/: main.ipynb  model.py  utils.py
ML/Labs/L4/: main.ipynb
ML/Labs/L4/scripts/: install.sh
ML/Labs/L5/: main.ipynb
ML/Labs/L5/scripts/: install.sh
Modeling/L1/: drawEmpiricalDistributionFunc.m  drawHist.m  drawPlanarDistribution.m  laggedFibbonacci.m  main.m  mersenneTwister.m  multiplicativeCongruenceGenerator.m  printStats.m  test.m
Modeling/L3/: drawEmpiricalDistributionFunc.m  main.m  printStats.m  rayleighDistribution.m
Modeling/L4/: drawHist.m  gammaDistribution.m  main.m  printStats.m
OperationsResearch/L3/: pyproject.toml
OperationsResearch/L3/src/: main.py
OperationsResearch/L4/: pyproject.toml
OperationsResearch/L4/src/: main.ipynb
SoftwareEngineering/L2/: docker-compose.yaml
SoftwareEngineering/L2/scripts/: 2.cypher
SoftwareEngineering/L3/: pyproject.toml
SoftwareEngineering/L3/scripts/: 1.cypher  2.cypher
SoftwareEngineering/L3/src/: config.py  containers.py  database.py  enums.py  interface.py  main.py  schemas.py  services.py
SoftwareEngineering/L3/src/tcss/: styles.tcss
SoftwareEngineering/L4/: docker-compose.yaml
SoftwareEngineering/L5/: docker-compose.yaml  pyproject.toml  test.py
SoftwareEngineering/L5/dags/: products_pipeline_dag.py  task_1_dag.py  weather_pipeline_dag.py
SoftwareEngineering/L5/data/: processed_weather_data.csv  products.parquet  weather.parquet  weather_data.json
