[project]
name = "l7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "prettytable>=3.15.1",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.39",
]
