[tool.poetry]
name = "l2"
version = "0.1.0"
description = ""
authors = ["nickAnhel <anhimovn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
igraph = "^0.11.8"
matplotlib = "^3.10.1"
networkx = "^3.4.2"
cairocffi = "^1.7.1"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
