[tool.poetry]
name = "labs"
version = "0.1.0"
description = ""
authors = ["nickAnhel <anhimovn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
pillow = "^11.1.0"
keras = "^3.8.0"
tensorflow-keras = "^0.1"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
